# TaskKit

./: .gitignore  CMakeLists.txt  LICENSE  README.ja.md  README.md  README_ja.md
include/: CMakeLists.txt  TaskKit.h
include/details/: AwaitTransformer.h  CustomAwaitTransformer.h  Exceptions.h  PoolAllocator.h  PromiseBase.h  PromiseContext.h  Task.h  TaskAllocator.h  TaskScheduler.h  TaskSchedulerId.h  TaskSchedulerManager.h  TaskSystem.h  TaskSystemConfiguration.h  ThreadPool.h  Utility.h
sample/: CMakeLists.txt  QuickStart.cpp
samples/: CMakeLists.txt  QuickStart.cpp
tests/: AllocatorTests.cpp  CMakeLists.txt  PoolAllocatorTests.cpp  TaskKitTestBase.h  TaskTests.cpp  TestBase.h  ThreadPoolTests.cpp  UtilityTests.cpp
